[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "rtms"
version = "1.0.3"
description = "Python bindings for the Zoom RTMS C SDK - Real-Time Media Streaming"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zoom Communications, Inc."}
]
maintainers = [
    {name = "Max Mansfield", email = "max.mansfield@zoom.us"}
]
keywords = [
    "zoom",
    "rtms",
    "realtime",
    "media",
    "streaming",
    "real-time",
    "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/zoom/rtms"
Documentation = "https://zoom.github.io/rtms/"
Source = "https://github.com/zoom/rtms"
Issues = "https://github.com/zoom/rtms/issues"

[tool.scikit-build]
# Include SDK libraries and README in source distributions
sdist.include = [
    "lib/**/*",
    "README.md",
]

# Platform-specific settings
# scikit-build-core will automatically detect platform and set appropriate wheel tags
minimum-version = "0.4"

# Wheel configuration
[tool.scikit-build.wheel]
packages = ["src/rtms"]
install-dir = "."
# Set platform tags for Linux to manylinux (ensures PyPI accepts our wheels)
platlib = true

[tool.scikit-build.cmake]
# Pass build type to CMake
build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "pyproject.toml"

# cibuildwheel configuration for multi-version Python wheel building
[tool.cibuildwheel]
# Build for Python 3.10, 3.11, 3.12, 3.13 on supported platforms
build = "cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds and musllinux (we only support glibc)
skip = "*-win32 *-manylinux_i686 *-musllinux_*"

# Platform-specific settings for macOS
[tool.cibuildwheel.macos]
archs = ["arm64"]  # Only Apple Silicon for macOS
repair-wheel-command = ""  # Disable delocate (SDK already bundled)

# Platform-specific settings for Linux
[tool.cibuildwheel.linux]
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair --exclude librtmsdk.so.0 -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux_2_34"  # Zoom SDK requires GLIBC 2.34 (pthread symbols)

# Environment variables during build
[tool.cibuildwheel.environment]
CMAKE_BUILD_TYPE = "Release"

# Test command (run after each wheel build)
test-command = "python -c 'import rtms; print(rtms.__version__)'"
test-requires = ["pytest", "python-dotenv"]

# Before build: ensure SDK files are present
before-build = "ls -la {project}/lib/linux-x64/ || ls -la {project}/lib/darwin-arm64/ || echo 'SDK files must be present'"